Fixed clipping

--- a/project-folder/src/components/GroupView.css
+++ b/project-folder/src/components/GroupView.css
@@ -57,6 +57,11 @@
 
 }
 
+.groupTitle {
+  text-align: center;
+}
+
+
 .groupViewMessageButton {
   margin-top: 0px;
   margin-right: 0px;
@@ -83,8 +88,8 @@
 }
 
 .messageContainerDiv {
-  margin-top: 20px;
-  position: fixed;
+  margin-top: 8%;
+  /* position: fixed; */
   top: 60px;
   width: 100%;
   bottom: 65px;
@@ -140,3 +145,9 @@
 .addIcon {
   color: green;
 }
+.groupSegmentButton {
+  display: inline-block;
+}
+/* #groupSegment {
+  display: inline-block;
+} */
